finished project v4 - trying to fix images not showing on github pages

--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -13,7 +13,7 @@
 
   &__image {
     position: relative;
-    background-image: url("/EasyBank-Project-LP---study/images/bg-intro-mobile.svg");
+    background-image: url("../../../images/bg-intro-mobile.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -47,7 +47,7 @@
         content: "";
         position: absolute;
         height: 100%;
-        background-image: url("/EasyBank-Project-LP---study/images/bg-intro-desktop.svg");
+        background-image: url("../../../images/bg-intro-desktop.svg");
         background-repeat: no-repeat;
         background-position: center bottom;
         width: 150%;
@@ -61,7 +61,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-image: url("/EasyBank-Project-LP---study/images/image-mockups.png");
+      background-image: url("../../../images/image-mockups.png");
       background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
